# b33p

./: .clang-tidy  .gitattributes  .gitignore  Build and Launch.command  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  REVIEW-DESIGN.md  REVIEW-USER.md  TODO.md  build_and_launch.py  clang-tidy.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  StandaloneApp.cpp
Source/Core/: CommandLineFiles.cpp  CommandLineFiles.h  ParameterIDs.h
Source/DSP/: AmpEnvelope.cpp  AmpEnvelope.h  Bitcrush.cpp  Bitcrush.h  Distortion.cpp  Distortion.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  LowpassFilter.cpp  LowpassFilter.h  ModulationEffect.cpp  ModulationEffect.h  ModulationMatrix.h  Oscillator.cpp  Oscillator.h  OutputLimiter.cpp  OutputLimiter.h  PitchEnvelope.cpp  PitchEnvelope.h  SmoothingHelpers.h  Voice.cpp  Voice.h
Source/Pattern/: AudioFileWriter.cpp  AudioFileWriter.h  Pattern.cpp  Pattern.h  PatternRenderer.cpp  PatternRenderer.h  PatternSnapshot.cpp  PatternSnapshot.h  SnapMath.h  WavWriter.cpp  WavWriter.h
Source/Resources/: Icon.icns  README.md  make_icon.py
Source/State/: AudibilityCheck.cpp  AudibilityCheck.h  B33pProcessor.cpp  B33pProcessor.h  GeneratorPresets.cpp  GeneratorPresets.h  ParameterLayout.cpp  ParameterLayout.h  ParameterRandomizer.cpp  ParameterRandomizer.h  PresetManager.cpp  PresetManager.h  ProjectFileManager.cpp  ProjectFileManager.h  ProjectState.cpp  ProjectState.h  UndoableActions.h
Source/UI/: AmpEnvSection.cpp  AmpEnvSection.h  AmpEnvelopeVisualizer.cpp  AmpEnvelopeVisualizer.h  AudioSettingsWindow.cpp  AudioSettingsWindow.h  B33pEditor.cpp  B33pEditor.h  B33pLookAndFeel.cpp  B33pLookAndFeel.h  EffectsSection.cpp  EffectsSection.h  EventOverridesDialog.cpp  EventOverridesDialog.h  ExportDialog.cpp  ExportDialog.h  ExportTask.cpp  ExportTask.h  FilterResponseVisualizer.cpp  FilterResponseVisualizer.h  FilterSection.cpp  FilterSection.h  IconButton.cpp  IconButton.h  InspectorStrip.cpp  InspectorStrip.h  LabeledSlider.cpp  LabeledSlider.h  MasterSection.cpp  MasterSection.h  ModEffectsSection.cpp  ModEffectsSection.h  ModulationGlow.cpp  ModulationGlow.h  ModulationSection.cpp  ModulationSection.h  OscillatorSection.cpp  OscillatorSection.h  PatternGrid.cpp  PatternGrid.h  (+15 more)
Tests/: CMakeLists.txt  SanityTest.cpp
Tests/Core/: CommandLineFilesTests.cpp
Tests/DSP/: AmpEnvelopeTests.cpp  BitcrushTests.cpp  DistortionTests.cpp  FilterTests.cpp  LFOTests.cpp  LowpassFilterTests.cpp  ModulationEffectTests.cpp  OscillatorTests.cpp  OutputLimiterTests.cpp  PitchEnvelopeTests.cpp  VoiceTests.cpp
Tests/Harness/: RenderVoice.cpp  VoiceRenderer.cpp  VoiceRenderer.h  VoiceRendererTests.cpp
Tests/Pattern/: AudioFileWriterTests.cpp  PatternRendererTests.cpp  PatternSnapshotTests.cpp  PatternTests.cpp  SnapMathTests.cpp  WavWriterTests.cpp
Tests/State/: AmpEnvSnapshotTests.cpp  AudibilityCheckTests.cpp  ConcurrencyTests.cpp  ParameterLayoutTests.cpp  ParameterRandomizerTests.cpp  ProjectStateTests.cpp
cmake/: CPM.cmake
docs/: FAQ.md  RELEASE_SMOKE.md  REVIEW.md  USAGE.md
